Bug 1872705: Set a maximum number of recycled canvas buffers. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D197856